--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 body {
+  height: calc(100vh - 68px);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #f3f3f4;
+  padding: 16px;
 }
 
 @layer utilities {
